2007-11-27	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* sp07/sp07.scn, sp07/task1.c, sp09/screen01.c, sp09/screen05.c,
	sp09/screen07.c, sp09/screen10.c, sp09/screen12.c, sp09/screen14.c,
	sp09/sp09.scn, sp25/sp25.scn, sp25/task1.c: Added several test cases
	to improve test coverage.

2007-11-27	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* sp33/init.c, sp33/sp33.scn: Added several test cases to improve test
	coverage.

2007-11-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp13/system.h: We need 32K of message buffer memory not 32 bytes.

2007-10-18	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* sp09/screen06.c, sp09/screen14.c, sp13/sp13.scn, sp13/task1.c,
	sp16/sp16.scn: Corrected some minor mistakes and regenerated some
	.scn files.

2007-10-10	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* sp09/init.c, sp09/sp09.scn: Removed an obsolete test that was
	commented out and updated the .scn file.

2007-06-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp20/task1.c, sp34/changepri.c, sp35/priinv.c: Build when using
	buffered test IO.

2007-05-29	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp21/sp21.scn, sp21/task1.c: rtems_io_register_driver and
	rtems_io_unregister_driver did not have any test code.

2007-05-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* spsize/size.c: Eliminate maximum_drivers configuration parameter
	since it was used to configure a no longer used feature. Device names
	are now part of the filesystem not in a table. This also eliminated
	the variables _IO_Number_of_devices and _IO_Driver_name_table from
	RTEMS as well as the memory allocation used to populate
	_IO_Driver_name_table.

2007-05-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp13/system.h, sp34/changepri.c, sp35/priinv.c: Avoid using
	CONFIGURE_MEMORY_OVERHEAD and try to really account for the memory
	properly.

2007-05-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* spsize/size.c: Eliminated the variables
	_RTEMS_tasks_User_initialization_tasks and